[package]
name = "evm-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web3 = "0.18.0"
warp = "0.3"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres"] }
url = "2.2"
hex = "0.4"
